# telomore

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  NBC_00287.nonpolish.qc.map.sam.sort.bam  NBC_00287.nonpolish.qc.map.sam.sort.bam.bai  README.md  arg_parser.py  bowtie2_cmd.sh  cmd_tools.py  consensus.log.txt  environment.yml  fasta_tools.py  finishline.py  main illumina.py  main.py  main_illumina.py  main_nanopore.py  map_tools.py  minimap2_cmd.sh  pyproject.toml  qc_reports.py  requirements.txt  sam_filters.py  sam_tools.py  setup.py  telomore.py  telomore_workflow.py  todo.txt  workflow.py
bash_scripts/: bowtie2_cmd.sh  bowtie2_cons_cmd.sh  minimap2_cmd.sh
src/telomore/: __init__.py  app.py
src/telomore/utils/: __init__.py  arg_parser.py  classes_and_small_func.py  cmd_tools.py  fasta_tools.py  map_tools.py  qc_reports.py
telomore/: telomore.py
telomore/bash_scripts/: bowtie2_cmd.sh  bowtie2_cons_cmd.sh
telomore/utils/: arg_parser.py  classes_and_small_func.py  cmd_tools.py  fasta_tools.py  map_tools.py  qc_reports.py
utils/: __init__.py  arg_parser.py  classes_and_small_func.py  cmd_tools.py  fasta_tools.py  map_tools.py  qc_reports.py  replicon_class.py
utlis/: cmd_tools.py  fasta_tools.py  map_tools.py  qc_reports.py
